--- a/css/styles.css
+++ b/css/styles.css
@@ -44,14 +44,14 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0px;
   text-align: center;
   text-transform: uppercase;
+  width: 100%;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
 }
@@ -61,7 +61,7 @@ nav h1 {
 nav h1 a {
   color: #fff;
   font-size: 14pt;
-  font-weight: 200;
+  font-weight: 100;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
@@ -99,7 +99,7 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 100%;
   width: 100%;
   background-color: #ccc;
 }
@@ -109,16 +109,20 @@ nav h1 a {
   height: 50px;
   background-color: #3397DB;
   align-items: center;
+
+  display: flex;
+  flex-wrap: wrap;
+
 }
 .filter-options h2 {
-  color: white;
+  color: #ffffff;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
 }
 .filter-options select {
-  background-color: white;
+  background-color: #ffffff;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
   font-size: 11pt;
@@ -136,6 +140,9 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+
+  display: flex;
+  flex-wrap: wrap;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -146,6 +153,8 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+
+  flex-grow: 1;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -191,10 +200,10 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: calc(100% - 110px);
   position: fixed;
   right: 0;
-  top: 80px;
+  top: 110px;
   width: 50%;
 }
 .inside #map {
@@ -205,7 +214,6 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
 }
 #restaurant-name {
   color: #f18200;
@@ -230,7 +238,7 @@ nav h1 a {
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
+  margin: 0 0 5px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
@@ -239,12 +247,16 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  width: calc((100% /2) - 60px);
+}
+#restaurant-container {
+  padding: 161px 30px 80px;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 30px 80px;
 }
+
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -263,13 +275,273 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
   width: 85%;
 }
-#reviews-list li p {
-  margin: 0 0 10px;
-}
+
 #restaurant-hours td {
   color: #666;
+}
+
+
+
+nav {
+  padding: 40px 0px;
+}
+
+#restaurant-name, #restaurant-cuisine, #restaurant-img, #restaurant-address, #restaurant-hours {
+  width: 100%;
+}
+
+#reviews-list li {
+  width: initial;
+}
+
+
+#reviews-list li{
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+
+.reviewHeader {
+  padding: 15px 20px;
+  height: 25px;
+  background-color: #333333;
+
+}
+
+.reviewName {
+  float: left;
+  color: #ffffff;
+  margin: auto; 
+}
+p.reviewName, #breadcrumb li {
+  font-size: 13pt;
+}
+
+.reviewDate {
+  float: right;
+  color: #c8c8c8;
+  margin: auto;   
+}
+td, th, p {
+    font-size: 11pt;
+}
+
+.reviewRating {
+  clear: both;
+  color: #ffffff;
+  background-color: #ffa500;
+  padding: 5px 13px;
+  margin: 15px 20px; 
+  border-radius: 3px;
+  display: inline-block;
+}
+p.reviewRating {
+    text-transform: uppercase;
+}
+
+.reviewBody {
+  padding: 0 20px 20px;
+  margin: 0 0 10px;
+  color: #757575;
+}
+
+#restaurant-address {
+  color: #ffffff;
+    background-color: #ffa500;
+    padding: 5px 13px;
+    margin: 0 0 20px;
+    border-radius: 3px;
+    display: block;
+    width: initial;
+}
+
+/*------------table----------*/
+table#restaurant-hours {
+    background: white;
+    border: 1px solid #C1C3D1;
+    border-radius: 3px;
+    border-collapse: collapse;
+    height: 320px;
+    width: 100%;
+}
+
+table#restaurant-hours tr {
+  border-bottom: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+table#restaurant-hours tr:last-child {
+  border-bottom:none;
+}
+
+table#restaurant-hours tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+
+table#restaurant-hours td {
+    padding: 10px;
+    text-align: left;
+    vertical-align: middle;
+}
+table#restaurant-hours tr td:first-child {
+    border-right: 1px solid #C1C3D1;
+}
+
+@media screen and (max-width: 827px){
+   #restaurant-container {
+      padding: 164px 20px 30px;
+    }
+    #reviews-container {
+      padding: 30px 20px 65px;
+    } 
+    #restaurant-container, #reviews-container {
+      width: calc((100% /2) - 40px)
+    }
+}
+
+@media screen and (max-width: 800px) and (min-width: 713px){
+ #breadcrumb li {
+  font-size: 18px;
+ } 
+
+ #restaurant-name {
+  font-size: 19pt;
+ }
+}
+/*all vertical*/
+@media screen and (max-width: 713px){
+  #breadcrumb {
+    width: calc(100% - 40px);
+    font-size: 22px;
+    padding: 10px 20px 16px;
+  }
+
+  #breadcrumb li {
+    font-size: 22px;
+  } 
+
+  .inside #map-container, #map-container {
+    height: 300px;
+    width: 100%;
+  }
+
+  #restaurant-container {
+      padding: 0px 20px 30px;
+      width: calc((100% - 40px));
+
+  }
+  #reviews-container {
+    padding: 30px 20px 65px;
+    width: calc((100% - 40px));
+  }
+
+  #reviews-list li {
+      width: unset;
+  }  
+
+  #restaurant-cuisine {
+      width: 100%;
+  }
+
+  #restaurant-img {
+    width: 100%;
+  }
+
+  #maincontent {
+
+  }
+
+  .inside #maincontent {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 169px;
+  }
+
+  .inside #map-container {
+    position: static;    
+  }
+
+  #restaurant-container {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 450px){
+  nav h1 a {
+    font-size: 13pt;
+    margin: 0 10px;
+  }
+
+  #breadcrumb {
+    padding-top: 5px;
+    padding-bottom: 11px;
+  }
+
+  #breadcrumb li {
+  font-size: 21px;
+ } 
+
+  #footer {
+  font-size: 7pt;
+  padding: 18px 0px;
+ }
+
+  .inside #maincontent {
+    margin-top: 159px;
+  }
+
+  #reviews-container {
+    padding: 30px 20px 49px;
+  }
+}
+@media screen and (max-width: 425px){
+  nav h1 {
+    margin: 0 20px;
+  }
+
+  nav {
+    padding: 20px 0px;
+  }
+
+  #breadcrumb {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  #breadcrumb li {
+  font-size: 20px;
+ }
+
+  .inside #maincontent {
+    margin-top: 143px;
+  }
+}
+
+@media screen and (max-width: 360px){
+  #breadcrumb {
+    text-align: center;
+    width: 100%;
+    padding: 5px 0px;
+  }
+}
+
+/*Main Page*/
+@media screen and (max-width: 577px){
+ .filter-options select {
+    width: min-content;
+ }
+}
+
+@media screen and (max-width: 480px){
+  .filter-options {
+    height: 76px;
+ } 
+
+ .filter-options h2 {
+    margin-top: 10px;
+ }
 }
