--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 126px 40px 16px; /*120 header + 16 padding*/
     list-style: none;
     background-color: #eee;
     font-size: 17px;
@@ -98,6 +98,9 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+#map-container {
+  height: 300px;
+}
 #map {
   height: 100%;
   width: 100%;
@@ -250,7 +253,7 @@ nav h1 a {
   width: calc((100% /2) - 60px);
 }
 #restaurant-container {
-  padding: 161px 30px 80px;
+  padding: 0px 30px 80px;
 }
 #reviews-container {
   padding: 30px 30px 80px;
@@ -391,9 +394,12 @@ table#restaurant-hours tr td:first-child {
     border-right: 1px solid #C1C3D1;
 }
 
+
+/*media Queries*/
+
 @media screen and (max-width: 827px){
    #restaurant-container {
-      padding: 164px 20px 30px;
+      padding: 0px 20px 30px;
     }
     #reviews-container {
       padding: 30px 20px 65px;
@@ -451,14 +457,10 @@ table#restaurant-hours tr td:first-child {
     width: 100%;
   }
 
-  #maincontent {
-
-  }
-
   .inside #maincontent {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 169px;
+    margin-top: 110px;
   }
 
   .inside #map-container {
@@ -491,7 +493,7 @@ table#restaurant-hours tr td:first-child {
  }
 
   .inside #maincontent {
-    margin-top: 159px;
+    margin-top: 110px;
   }
 
   #reviews-container {
@@ -517,7 +519,7 @@ table#restaurant-hours tr td:first-child {
  }
 
   .inside #maincontent {
-    margin-top: 143px;
+    margin-top: 100px;
   }
 }
 
@@ -545,3 +547,16 @@ table#restaurant-hours tr td:first-child {
     margin-top: 10px;
  }
 }
+
+/*Adel: last: the issues: 
+  1- the map should move above the footer, yet stay if away from it
+  2- the last element in the restaurants list at the home page should be given a width depending on other li width
+  3- the fonts
+  4- the images: Use responsive images that adjust for the dimensions and resolution of any mobile device
+  5- A11y: Focus, Semantics, Styling;
+    - Focus: http://web-accessibility.carnegiemuseums.org/content/maps/;
+    - the description of the map purpose is exatly the whole page, so we need to get it out of focus, and provide a link to the real version of it
+     - for a starter get it out of focus
+  6- PWA
+  7- Use appropriate document type declaration
+*/
