--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -461,6 +461,64 @@ a.skip-link:hover {
     overflow: visible; 
 }
 
+/*------------form----------*/
+
+#formDiv {
+  margin-bottom: 30px;    
+}
+
+#formDiv h4 {
+  color: #f58500;
+  font-size: 18pt;
+  font-weight: 300;
+  letter-spacing: -1px;
+  padding-bottom: 1pt;
+}
+
+#formDiv form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#formDiv input {
+    width: calc((100% - 94px)/2);
+    border: 1px solid #c1c3d1;
+    border-radius: 4px;
+    padding: 12px 20px;    
+}
+
+#formDiv input:first-of-type {
+    margin-right: 10px;
+}
+
+#formDiv textarea {
+    width: 100%;
+    resize: none;
+    margin: 10px 0;
+    height: 130px;
+    border: 1px solid #c1c3d1;
+    border-radius: 4px;     
+    padding: 12px 20px;
+}
+
+#formDiv button {
+  background-color: orange;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  display: inline-block;
+  font-size: 10pt;
+  margin: auto;
+  padding: 8px 30px 10px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+#formDiv button:hover {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.24), 0 2px 10px 0 rgba(0,0,0,0.19);
+}
+
 /*media Queries*/
 @media screen and (max-width: 1000px){
  #restaurants-list li {
@@ -686,6 +744,15 @@ a.skip-link:hover {
   #favorite {
     width: 9%;
   }
+// form
+  #formDiv input {
+    width: 100%;
+  }
+
+  #formDiv input:first-of-type {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }  
 }
 
 @media screen and (max-width: 350px){
